# shennian

./: .gitignore  LICENSE  PROTOCOL.md  README.md  README.zh.md
examples/bash/: agent.sh
examples/node/: .env.example  agent.mjs  hello-spawn.mjs
examples/python/: agent.py
sdk/node/: README.md  package.json  tsconfig.json
sdk/node/examples/: proactive.mjs  simple.mjs
sdk/node/src/: agent.ts  events.ts  index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: proactive.py  simple.py
sdk/python/shennian_agent/: __init__.py  agent.py  events.py
