[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shennian-agent"
version = "0.1.0"
description = "Python SDK for the Shennian Agent Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Shennian", email = "hi@codyer.com" }]
keywords = ["shennian", "agent", "protocol", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/CosmosShadow/shennian_cli"
Repository = "https://github.com/CosmosShadow/shennian_cli"
Documentation = "https://github.com/CosmosShadow/shennian_cli/blob/main/PROTOCOL.md"
